--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
       <div class="navlinks">
         <a href="#inicio">Inicio</a>
         <a href="#destinos">Destinos</a>
-        <a href="#contacto">Contacto</a>
+        <a class="cta" href="blog.html">Blog</a>
+        <a class="cta" href="sobre.html">Sobre Nosotros</a>
         <a class="cta" href="#contacto">Reservá</a>
+
       </div>
     </nav>
   </div>
