--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
 
   <!-- Fuentes -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Estilos -->
   <link rel="stylesheet" href="styles.css">
@@ -100,6 +101,7 @@ header {
       <div class="navlinks">
         <a href="index.html">Inicio</a>
         <a href="sobre.html">Sobre nosotros</a>
+         <a href="rentabus.html">Rent a Bus</a>
         <a href="contacto.html">Contacto</a>
       </div>
     </nav>
@@ -161,11 +163,10 @@ header {
       </a>
     </div>
     
-    <!-- Redes sociales (derecha) -->
+  <!-- Redes sociales (derecha) -->
     <div class="socials" style="font-size:16px;">
-      <a href="https://instagram.com/" target="_blank" style="margin-right:12px; color:#E4405F;">Instagram</a>
-      <a href="https://facebook.com/" target="_blank" style="margin-right:12px; color:#1877F2;">Facebook</a>
-      <a href="https://tiktok.com/" target="_blank" style="color:#000;">TikTok</a>
+      <a href="https://www.instagram.com/elturista.uy/?utm_source=ig_web_button_share_sheet" target="_blank" style="margin-right:12px; color:#E4405F;">Instagram</a>
+      <a href="https://www.facebook.com/profile.php?id=61580975551264" target="_blank" style="margin-right:12px; color:#1877F2;">Facebook</a>
     </div>
     
   </div>
