--- a/sobre.html
+++ b/sobre.html
@@ -7,6 +7,7 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css">
@@ -101,6 +102,7 @@
       <div class="navlinks">
         <a href="index.html">Inicio</a>
         <a href="blog.html">Blog</a>
+         <a href="rentabus.html">Rent a Bus</a>
         <a href="contacto.html">Contacto</a>
       </div>
     </nav>
@@ -125,6 +127,49 @@
     <h3>🌍 Nuestra misión</h3>
     <p>Brindar experiencias de viaje auténticas y memorables, fomentando la conexión con los destinos y la cultura local.</p>
   </div>
+
+<!-- Nuestro Bus — Sección Deluxe -->
+<section class="about-section" style="padding:60px 20px; background: linear-gradient(135deg, #e3f2fd, #ffffff); border-radius:20px; box-shadow:0 8px 25px rgba(0,0,0,0.1); margin-bottom:60px;">
+  <h3 style="text-align:center; font-size:2rem; margin-bottom:30px;">🚌 Nuestro Bus — Confort y Seguridad</h3>
+
+  <!-- Imagen del bus -->
+  <div style="display:flex; justify-content:center; gap:20px; margin-bottom:30px; flex-wrap:wrap;">
+  <img src="elturistabus2.jpg" alt="Nuestro bus — 48 plazas, seguro y cómodo" style="width:48%; max-width:600px; border-radius:16px; box-shadow:0 6px 20px rgba(0,0,0,0.08);">
+  <img src="elturistabus3.jpg" alt="Nuestro bus — 48 plazas, seguro y cómodo" style="width:48%; max-width:600px; border-radius:16px; box-shadow:0 6px 20px rgba(0,0,0,0.08);">
+</div>
+
+
+  <!-- Lista de características -->
+  <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(220px,1fr)); gap:24px; text-align:center;">
+    <div style="background:#fff; padding:24px; border-radius:16px; box-shadow:0 6px 18px rgba(0,0,0,0.08); transition: transform 0.2s;">
+      <div style="font-size:2rem; margin-bottom:12px;">💺</div>
+      <h4>48 Plazas</h4>
+      <p>Comodidad total para todos nuestros pasajeros, con asientos amplios y reclinables.</p>
+    </div>
+    <div style="background:#fff; padding:24px; border-radius:16px; box-shadow:0 6px 18px rgba(0,0,0,0.08); transition: transform 0.2s;">
+      <div style="font-size:2rem; margin-bottom:12px;">🛡️</div>
+      <h4>Seguridad Garantizada</h4>
+      <p>Supera el test anti-vuelco de <strong>38°</strong>, viaje seguro de principio a fin.</p>
+    </div>
+    <div style="background:#fff; padding:24px; border-radius:16px; box-shadow:0 6px 18px rgba(0,0,0,0.08); transition: transform 0.2s;">
+      <div style="font-size:2rem; margin-bottom:12px;">🧼</div>
+      <h4>Higiene Impecable</h4>
+      <p>Desinfectado antes de cada viaje, con un estándar de limpieza superior.</p>
+    </div>
+    <div style="background:#fff; padding:24px; border-radius:16px; box-shadow:0 6px 18px rgba(0,0,0,0.08); transition: transform 0.2s;">
+      <div style="font-size:2rem; margin-bottom:12px;">✨</div>
+      <h4>Experiencia Perfecta</h4>
+      <p>Espacios amplios, iluminación agradable y confort pensado para disfrutar cada momento.</p>
+    </div>
+  </div>
+
+  <!-- CTA sutil -->
+  <div class="cta-box" style="margin-top:40px;">
+    <p style="font-size:1.2rem;">Subite y descubrí lo que significa viajar con estilo y seguridad 🚀</p>
+  </div>
+</section>
+
+
 
   <!-- Equipo -->
   <section class="about-section">
@@ -153,6 +198,7 @@
     <h3>¿Listo para tu próxima aventura?</h3>
     <a href="contacto.html">🚀 Planificá tu viaje con nosotros</a>
   </div>
+
 </main>
 
 <footer class="section" style="background:#f8f9fa; padding:40px 20px; border-top:1px solid #ddd; position:relative;">
@@ -172,9 +218,8 @@
     
     <!-- Redes sociales (derecha) -->
     <div class="socials" style="font-size:16px;">
-      <a href="https://instagram.com/" target="_blank" style="margin-right:12px; color:#E4405F;">Instagram</a>
-      <a href="https://facebook.com/" target="_blank" style="margin-right:12px; color:#1877F2;">Facebook</a>
-      <a href="https://tiktok.com/" target="_blank" style="color:#000;">TikTok</a>
+      <a href="https://www.instagram.com/elturista.uy/?utm_source=ig_web_button_share_sheet" target="_blank" style="margin-right:12px; color:#E4405F;">Instagram</a>
+      <a href="https://www.facebook.com/profile.php?id=61580975551264" target="_blank" style="margin-right:12px; color:#1877F2;">Facebook</a>
     </div>
     
   </div>
