--- a/contacto.html
+++ b/contacto.html
@@ -100,27 +100,27 @@
   </style>
 </head>
 <body>
-
 <header>
   <div class="container">
     <nav>
       <div class="brand">
-   <a href="index.html">
-  <img src="logo.png" alt="El Turista logo" class="logoturista">
-</a>
+        <a href="index.html">
+          <img src="logo.png" alt="El Turista logo" class="logoturista">
+        </a>
         <div>
           <div style="font-size:12px;color:var(--muted)">Desde San José, Uruguay</div>
         </div>
       </div>
       <div class="navlinks">
-        <a href="index.html">Inicio</a>
+         <a href="index.html">Inicio</a>
         <a href="blog.html">Blog</a>
-        <a href="sobre.html">Sobre nosotros</a>
-         <a href="rentabus.html">Rent a Bus</a>
+        <a href="sobre.html">Sobre Nosotros</a>
+        <a href="contacto.html">Contacto</a>
       </div>
     </nav>
   </div>
 </header>
+
 
 <main class="container">
   <!-- Hero -->
