--- a/rentabus.html
+++ b/rentabus.html
@@ -106,14 +106,15 @@
         </div>
       </div>
       <div class="navlinks">
-        <a href="index.html">Inicio</a>
+         <a href="index.html">Inicio</a>
         <a href="blog.html">Blog</a>
-        <a href="sobre.html">Sobre nosotros</a>
+        <a href="sobre.html">Sobre Nosotros</a>
         <a href="contacto.html">Contacto</a>
       </div>
     </nav>
   </div>
 </header>
+
 
 <main class="container">
   <!-- Hero -->
