--- a/destinos.html
+++ b/destinos.html
@@ -10,67 +10,310 @@
 </head>
 <body>
 <header>
-  <nav class="container" style="display:flex;align-items:center;justify-content:space-between;padding:18px 0;">
-    <a href="index.html" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-      <img src="logo.png" alt="El Turista logo" style="height:40px;">
-      <span style="font-weight:700;font-size:1.2rem;color:#0077ff">El Turista</span>
-    </a>
-    <div style="display:flex;gap:18px;">
-      <a href="index.html">Inicio</a>
-      <a href="contacto.html">Contacto</a>
-    </div>
-  </nav>
+  <div class="container">
+    <nav>
+      <div class="brand">
+        <a href="index.html">
+          <img src="logo.png" alt="El Turista logo" class="logoturista">
+        </a>
+        <div>
+          <div style="font-size:12px;color:var(--muted)">Desde San José, Uruguay</div>
+        </div>
+      </div>
+      <div class="navlinks">
+         <a href="index.html">Inicio</a>
+        <a href="blog.html">Blog</a>
+        <a href="sobre.html">Sobre Nosotros</a>
+        <a href="contacto.html">Contacto</a>
+      </div>
+    </nav>
+  </div>
 </header>
 <main class="container">
   <section class="section" style="margin-top:32px;">
-    <h1 style="color:#0077ff">Destinos Turísticos</h1>
-    <p>Inspirate y encontrá tu próximo destino. Viajes grupales y privados, experiencias únicas y rincones por descubrir.</p>
-    <div class="grid" style="grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;margin-top:32px;">
-      <article class="card" style="background:#fff;border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,0.07);padding:18px;">
-        <img src="dest1.jpg" alt="Cabo Polonio" style="width:100%;border-radius:8px;">
-        <h3 style="margin:12px 0 6px">Cabo Polonio</h3>
+    <h1 style="color:#0077ff;text-align:center;">Destinos Turísticos</h1>
+    <p style="text-align:center;max-width:720px;margin:0 auto;">Inspirate y encontrá tu próximo destino. Viajes grupales y privados, experiencias únicas y rincones por descubrir.</p>
+
+    <div class="gallery" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;margin-top:32px;">
+      <article class="card">
+        <img src="dest1.jpg" alt="Cabo Polonio">
+        <h3>Cabo Polonio</h3>
         <p>Un paraíso natural sin calles ni autos, dunas y lobos marinos. Ideal para desconectar.</p>
+        <a href="rio.html" class="btn">Ver más</a>
       </article>
-      <article class="card" style="background:#fff;border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,0.07);padding:18px;">
-        <img src="dest2.jpg" alt="Valle Edén" style="width:100%;border-radius:8px;">
-        <h3 style="margin:12px 0 6px">Valle Edén</h3>
+      <article class="card">
+        <img src="dest2.jpg" alt="Valle Edén">
+        <h3>Valle Edén</h3>
         <p>Senderos, leyendas y naturaleza en el corazón de Tacuarembó. Perfecto para aventureros.</p>
+        <a href="rio.html" class="btn">Ver más</a>
       </article>
-      <article class="card" style="background:#fff;border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,0.07);padding:18px;">
-        <img src="dest3.jpg" alt="La Paloma" style="width:100%;border-radius:8px;">
-        <h3 style="margin:12px 0 6px">La Paloma</h3>
+      <article class="card">
+        <img src="dest3.jpg" alt="La Paloma">
+        <h3>La Paloma</h3>
         <p>Playas extensas, surf y atardeceres inolvidables. El balneario ideal para familias y jóvenes.</p>
+        <a href="rio.html" class="btn">Ver más</a>
       </article>
-      <article class="card" style="background:#fff;border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,0.07);padding:18px;">
-        <img src="gal4.jpg" alt="Salto Termal" style="width:100%;border-radius:8px;">
-        <h3 style="margin:12px 0 6px">Salto Termal</h3>
+      <article class="card">
+        <img src="gal4.jpg" alt="Salto Termal">
+        <h3>Salto Termal</h3>
         <p>Relajación total en aguas termales, parques acuáticos y hoteles spa. Ideal para descansar.</p>
+        <a href="rio.html" class="btn">Ver más</a>
       </article>
-      <article class="card" style="background:#fff;border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,0.07);padding:18px;">
-        <img src="gal5.jpg" alt="Montevideo Cultural" style="width:100%;border-radius:8px;">
-        <h3 style="margin:12px 0 6px">Montevideo Cultural</h3>
+      <article class="card">
+        <img src="gal5.jpg" alt="Montevideo Cultural">
+        <h3>Montevideo Cultural</h3>
         <p>Teatros, museos, ferias y gastronomía. La capital uruguaya te espera con propuestas todo el año.</p>
+        <a href="rio.html" class="btn">Ver más</a>
       </article>
-      <article class="card" style="background:#fff;border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,0.07);padding:18px;">
-        <img src="gal6.jpg" alt="Río de Janeiro" style="width:100%;border-radius:8px;">
-        <h3 style="margin:12px 0 6px">Río de Janeiro</h3>
+      <article class="card">
+        <img src="gal6.jpg" alt="Río de Janeiro">
+        <h3>Río de Janeiro</h3>
         <p>La ciudad maravillosa: playas, samba y cultura brasileña. Salidas internacionales desde San José.</p>
+        <a href="rio.html" class="btn">Ver más</a>
       </article>
     </div>
-  </section>
-  <section class="section" style="margin-top:48px;">
-    <h2 style="color:#0077ff">¿Querés cotizar tu viaje?</h2>
-    <p>Contactanos y armamos tu experiencia a medida. Viajes grupales, familiares, de amigos o escapadas románticas.</p>
-    <a href="contacto.html" style="display:inline-block;margin-top:16px;background:#0077ff;color:#fff;padding:12px 28px;border-radius:8px;text-decoration:none;font-weight:600;">Solicitar cotización</a>
   </section>
 </main>
-<footer class="section" style="margin-top:64px;background:#f8f9fa;padding:1.5rem 1rem;border-top:1px solid #ddd;">
-  <div class="container" style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;">
-    <div style="font-size:0.95rem;color:#555;">© El Turista — San José</div>
-    <div>
-      <a href="https://www.instagram.com/elturista.uy/" target="_blank" style="margin-right:12px;color:#E4405F;text-decoration:none;font-weight:600;">Instagram</a>
-      <a href="https://www.facebook.com/profile.php?id=61580975551264" target="_blank" style="color:#1877F2;text-decoration:none;font-weight:600;">Facebook</a>
+
+<style>
+.gallery img {
+  width: 100%;
+  height: 180px;        /* altura uniforme */
+  object-fit: cover;    /* recorta imágenes si es necesario */
+  border-radius: 12px;
+  transition: transform 0.3s;
+}
+
+.gallery img:hover {
+  transform: scale(1.05);
+}
+
+.card {
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 8px 24px rgba(0,0,0,0.15);
+}
+
+.card h3 {
+  margin: 12px 0 6px;
+  color: #0077ff;
+  font-size: 1.25rem;
+}
+
+.card p {
+  flex-grow: 1;
+  font-size: 0.95rem;
+  color: #555;
+}
+
+.btn {
+  margin-top: 12px;
+  display: inline-block;
+  text-decoration: none;
+  background: #0077ff;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-weight: 600;
+  text-align: center;
+  transition: background 0.3s, transform 0.2s;
+}
+
+.btn:hover {
+  background: #005bb5;
+  transform: scale(1.05);
+}
+</style>
+<br><br>
+<!-- FOOTER -->
+<footer class="footer">
+  <style>
+    /* ------------------ FOOTER AZUL ELEGANTE ------------------ */
+    .footer {
+      background: #0d1b2a; /* azul profundo */
+      color: #e6e6e6;
+      padding: 3rem 1rem 1rem;
+    }
+
+    .footer-container {
+      max-width: 75rem;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 2rem;
+    }
+
+    .footer-col h4 {
+      font-size: 1.1rem;
+      margin-bottom: 0.8rem;
+      color: #fff;
+    }
+
+    .footer-col p {
+      color: #c9d6df;
+      font-size: 0.95rem;
+      line-height: 1.5;
+    }
+
+    .footer-logo {
+      height: 3rem;
+      margin-bottom: 0.8rem;
+    }
+
+    .footer-col ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .footer-col ul li {
+      margin-bottom: 0.5rem;
+    }
+
+    .footer-col ul li a {
+      color: #c9d6df;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    .footer-col ul li a:hover {
+      color: #4da8da;
+    }
+
+    .btn-maps {
+      display: inline-block;
+      margin-top: 0.5rem;
+      padding: 0.4rem 0.8rem;
+      background: #1b263b;
+      color: #fff;
+      border-radius: 6px;
+      font-size: 0.85rem;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+    .btn-maps:hover {
+      background: #415a77;
+    }
+
+    .newsletter-form {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+    }
+    .newsletter-form input {
+      flex: 1;
+      padding: 0.6rem;
+      border: 1px solid #415a77;
+      border-radius: 6px;
+      background: #1b263b;
+      color: #fff;
+    }
+    .newsletter-form input::placeholder {
+      color: #8d99ae;
+    }
+    .newsletter-form button {
+      background: #4da8da;
+      color: #fff;
+      border: none;
+      padding: 0.6rem 1rem;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .newsletter-form button:hover {
+      background: #1e90ff;
+    }
+
+    .socials {
+      margin-top: 1rem;
+    }
+    .socials a {
+      margin-right: 0.8rem;
+      font-size: 1.3rem;
+      color: #4da8da;
+      transition: transform 0.2s, color 0.3s;
+    }
+    .socials a:hover {
+      transform: scale(1.2);
+      color: #1e90ff;
+    }
+
+    .footer-bottom {
+      text-align: center;
+      margin-top: 2rem;
+      font-size: 0.85rem;
+      color: #8d99ae;
+      border-top: 1px solid #415a77;
+      padding-top: 1rem;
+    }
+    .phone-link {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #fff; /* si tu footer es azul */
+  text-decoration: none;
+}
+
+.phone-link:hover {
+  text-decoration: underline;
+  color: #ffdd57; /* un color contraste */
+}
+
+    
+  </style>
+
+  <div class="footer-container">
+
+    <!-- Columna 1: Logo y descripción -->
+    <div class="footer-col">
+      <img src="logowhite.png" alt="El Turista logo" class="footer-logo">
+      <p>Agencia de viajes con más de 20 años de experiencia.  
+         Salidas desde San José hacia todo el país y el mundo.</p>
     </div>
+
+    <!-- Columna 2: Dirección -->
+    <div class="footer-col">
+      <h4>📍 Dirección</h4>
+      <p>San José de Mayo, Uruguay</p>
+      <a href="https://maps.google.com/?q=San+José+de+Mayo+Uruguay" target="_blank" class="btn-maps">Ver en mapa</a>
+    </div>
+
+    <!-- Columna 3: Enlaces -->
+    <div class="footer-col">
+      <h4>Enlaces rápidos</h4>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="destinos.html">Destinos</a></li>
+        <li><a href="sobre.html">Sobre Nosotros</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </div>
+
+    <!-- Columna 4: Newsletter -->
+<div class="footer-col">
+  <h4>📞 ¿Preferís hablar?</h4>
+  <p>Llamanos y te asesoramos al instante:</p>
+  <p><a href="tel:+59898765432" class="phone-link">+598 92 227 722</a></p>
+  
+  <div class="socials">
+    <a href="https://www.instagram.com/elturista.uy" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/profile.php?id=61580975551264" target="_blank"><i class="fab fa-facebook-f"></i></a>
+  </div>
+</div>
+
+  </div>
+
+  <div class="footer-bottom">
+    © 2025 El Turista — San José • Diseñado por Agustin Espinosa
   </div>
 </footer>
 </body>
